--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">ClimatePortal</div>
+        <div class="title">Snowpore</div>
       </div>
     </div>
     
