--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   color: black;
   padding: 5px;
   border-radius: 4px;">i
-  <img src="guide.png" class="tooltiptext">
+  <img src="snowguide.png" class="tooltiptext">
 </button>
   </body>
 </html>
