--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
   <body>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 1920px; height: 1080px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
+      <!--  <div class="footer">
+     <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Snowpore</div>
-      </div>
+        <div class="title">Snowpore</div> 
+      </div>-->
     </div>
     
     
